--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,24 +28,33 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  camera: ^0.10.5+2
+  dartz: ^0.10.1
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
+  fluttertoast: ^8.2.2
+  freezed_annotation: ^2.2.0
+  http: ^1.0.0
+  image_picker: ^0.8.8
+  json_annotation: ^4.8.1
+  shared_preferences: ^2.1.1  
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+ 
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  build_runner: ^2.4.5
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.5
+  json_serializable: ^6.7.0
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
